redesign storage around db functions